New User Fix + Better Font

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    color: white;
     background-image: linear-gradient(0deg, #77b2d4, #adf0fc);
 }
 
@@ -11,14 +13,14 @@ p {
 
 a{
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: bolder;
     font-size: larger;
 }
 
 a:visited {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 select {
@@ -46,7 +48,6 @@ select {
 
 .navbar a:hover {
     background: #ffa5d8;
-    color: black;
 }
 
 .main {
@@ -103,6 +104,10 @@ ol {
     min-width: 25%;
 }
 
+.statelist ul li a {
+    color: black;
+}
+
 .main-right {
     max-width: 10%;
     min-width: 20%;
@@ -122,11 +127,12 @@ ol {
 
 
 .btn {
+    text-shadow: none;
 	background-color:#9579d1;
 	border: 0;
 	border-radius: 50px;
 	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-	color: black;
+	color: black !important;
 	font-size: 16px;
 	padding: 12px 25px;
 	position: fixed;
@@ -141,6 +147,7 @@ ol {
 }
 
 .btn-above {
+    text-shadow: none;
     background-color:#9579d1;
 	border: 0;
 	border-radius: 50px;
@@ -157,4 +164,9 @@ ol {
 
 .btn-above:hover {
     background-color:#be9ddf;
+}
+
+.black-font {
+	text-shadow: none !important;
+	color: black !important;
 }
