--- a/web/css/flexbox.css
+++ b/web/css/flexbox.css
@@ -6,13 +6,15 @@
     margin-left: 50px;
     margin-top: -20px;
 }
-
-.flex-container {
-    margin-top: 5%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+@media only screen and (min-width: 600px) {
+    .flex-container {
+        margin-top: 5%;
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
 }
+
 
 .flex-object {
     margin: 2%;
