--- a/web/css/playercards.css
+++ b/web/css/playercards.css
@@ -142,4 +142,9 @@ body {
 		padding-right: 20px;
 		max-width: 150px;
 	}
+
+	.player-info {
+        background-image: none !important;
+		background: gray;
+    }
 }
