--- a/web/css/playercards.css
+++ b/web/css/playercards.css
@@ -87,7 +87,7 @@ body {
 }
 
 .player-preview {
-	background-color:#9579d1;
+	background-color:#3D2932;
 	color: #fff;
 	padding-top: 10px;
 	padding-left: 20px;
