--- a/web/css/playercards.css
+++ b/web/css/playercards.css
@@ -156,7 +156,6 @@ body {
 
 @media only screen and (max-width: 600px) {
 	.player-preview {
-		background-color:#9579d1;
 		color: #fff;
 		padding-top: 10px;
 		padding-left: 20px;
@@ -174,5 +173,13 @@ body {
 		overflow: hidden;
 		width: 900px;
 		height: 20px;
+	}
+
+	a {
+		font-size: 90%;
+	}
+
+	h4 {
+		font-size: 75%;
 	}
 }
