--- a/web/css/main.css
+++ b/web/css/main.css
@@ -141,7 +141,7 @@ ol {
 }
 
 .btn:hover {
-    background-color:#C45686;
+    background-color:#708C0F;
 }
 
 .btn-above {
@@ -150,7 +150,7 @@ ol {
 	border: 0;
 	border-radius: 50px;
 	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-	color: black;
+	color: black !important;
 	font-size: 16px;
 	padding: 12px 25px;
 	position: fixed;
@@ -167,6 +167,25 @@ ol {
 .black-font {
 	text-shadow: none !important;
 	color: black !important;
+}
+
+.btn-left {
+    text-shadow: none;
+	background-color:#708C0F;
+	border: 0;
+	border-radius: 50px;
+	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+	color: black !important;
+	padding: 12px 25px;
+	position: fixed;
+	bottom: 30px;
+	left: 30px;
+	letter-spacing: 1px;
+    font-size: 20px
+}
+
+.btn-left:hover {
+    background-color:#C45686;
 }
 
 @media only screen and (max-width: 600px) {
