--- a/web/css/playercards.css
+++ b/web/css/playercards.css
@@ -154,6 +154,10 @@ body {
 	justify-self: center;
 }
 
+.admin-container {
+	padding-top: 60px;
+}
+
 @media only screen and (max-width: 600px) {
 	.player-preview {
 		color: #fff;
